dataset1235/2025-2/2318198438/users/1225947802/executions/2601575092_3940197836.log
== RUN (2025-08-17 02:29:26)
-- CODE: 
aresta = 5
area = 3*3**0.5*5**2/2

print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:29:17)
-- CODE: 
aresta = 
area = 3*3**0.5*5**2/2

print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta = 
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta = 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:27:09)
-- CODE: 
aresta = 5
area = 
 3*3**0.5* 5**2/2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-17 02:29:05)
-- CODE: 
aresta = 5
area = 3*3**0.5*5**2/2

print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:28:48)
-- CODE: 
aresta = 5
area = 3*3**0.5*5**2/2

print(round(649519, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
649519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
649519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:28:19)
-- CODE: 
aresta = 5
area = 3*3**0.5*5**2/2

print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:28:29)
-- CODE: 
aresta = 5
area = 3*3**0.5* 5**2/2

print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:29:04)
-- CODE: 
aresta = 5
area = 3*3**0.5*5**2/2

print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
